DHCP file: revise shared-network and broadcast-address

--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -2,7 +2,7 @@ default-lease-time 86400;
 max-lease-time 86400;
 
 
-shared-network vlan10{
+shared-network ecsonic_gns3{
   allow client-updates;
   allow unknown-clients;
 
@@ -11,7 +11,7 @@ shared-network vlan10{
     option tftp-server-name "10.10.0.5";
     option subnet-mask 255.255.255.0;
     range 10.10.0.100 10.10.0.200;
-    option broadcast-address 10.0.0.255;
+    option broadcast-address 10.10.0.255;
     option domain-name-servers 8.8.8.8, 8.8.4.4;
 
     host spine-1{
